# websockets-example

./: Dockerfile  README.md
server/: websockets-example-server.cabal
server/src/: Main.hs
website/: package-lock.json
website/src/: Main.purs
